[package]
name = "bob-the-environment-enemy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "lib/utils/mod.rs"

[dependencies]
robotics_lib = { git = "ssh://github.com/Advanced-Programming-2023/Robotic-Lib", branch = "master" }
diff = "0"
rand = { version = "0.8.5", features = [] }
strum = "0.25.0"