[package]
name = "bob_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "bob_lib"
path = "src/lib.rs"

[dependencies]
robotics_lib = { git = "ssh://github.com/Advanced-Programming-2023/Robotic-Lib", branch = "master" }
diff = "0"
rand = { version = "0.8.5", features = [] }
strum = "0.25.0"
rayon = { version = "1.8.0", features = [] }