[package]
name = "bob_lib"
version = "0.1.1"
edition = "2021"
authors = ["Lorys Mutt @Lorysmutti", "Matteo Girardi @D35P4C1T0"]
description = "Bob has no arms and can't do sh*t, but he can certainly remember things for you!"
repository = "https://github.com/RustyPripyat/Bob_Lib"
keywords = ["tool"]
exclude = ["rustfmt.toml", ".*"]

[lib]
name = "bob_lib"
path = "src/lib.rs"

[dependencies]
robotics_lib = { registry = "kellnr"}
diff = "0"
rand = { version = "0.8.5", features = [] }
strum = "0.25.0"
rayon = { version = "1.8.0", features = [] }